add basic styling to the application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-contents">
     <nav class="navbar">
-        <a class="navbar-band" href="#"><img src="../assets/Logo.png"></a>
+        <a class="navbar-brand" href="#"><img src="../assets/Logo.png"></a>
         <ul class="links">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
@@ -9,31 +9,36 @@
     </nav>
     <div class="image-section"></div>
     <div class="call-to-action">
-        <p>“Come and give your say on these masterpiece philosophies, greatest philosopher wins...”</p>
+        <p>“Come and give your say on these<br> masterpiece philosophies,<br> greatest philosopher wins...”</p>
     </div>
     <hr>
-    <div class="quote-card">
-        <div class="voting">
-            <div class="upvote">
-                <button class="upvote-button"></button>
-                <div class="upvote-display">+</div>
+    <ol>
+        <li>
+            <div class="quote-card">
+                <div class="voting">
+                    <div class="upvote">
+                        <div class="btn upvote-button"><img src="../assets/Polygon 1.png" width="40px" height="40px"></div>
+                        <div class="upvote-display"></div>
+                    </div>
+                    <div class="downvote">
+                        <div class="btn downvote-button"><img src="../assets/Polygon 2.png" width="40px" height="40px"></div>
+                        <div class="downvote-display"></div>
+                    </div>
+                </div>
+                <div class="quote-details">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis omnis aliquid excepturi vel a?</p>
+                    <div class="author-details">
+                        <p>-authors name-</p>
+                        <p>job-title</p>
+                    </div>
+                    <div class="social-links">
+                        <a href="#"><img src="../assets/facebook.png" alt="facebook image"></a>
+                        <a href="#"><img src="../assets/twitter.png" alt="twitter image"></a>
+                        <a href="#"><img src="../assets/linkedin.png" alt="linkedin image"></a>
+                        <a href="#"><img src="../assets/instagram.png" alt="instagram image"></a>
+                    </div>
+                </div>
             </div>
-            <div class="downvote">
-                <button class="downvote-button"></button>
-                <div class="downvote-display">-</div>
-            </div>
-        </div>
-        <div class="vl"></div>
-        <div class="quote-details">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis omnis aliquid excepturi vel a?</p>
-            <p>-authors name-</p>
-            <p>job-title</p>
-            <div class="social-links">
-                <a href="#"><img src="../assets/facebook.png" alt="facebook image"></a>
-                <a href="#"><img src="../assets/twitter.png" alt="twitter image"></a>
-                <a href="#"><img src="../assets/linkedin.png" alt="linkedin image"></a>
-                <a href="#"><img src="../assets/instagram.png" alt="instagram image"></a>
-            </div>
-        </div>
-    </div>
+        </li>
+    </ol>
 </div>
