--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <ul class="links">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Quote of the day</a></li>
+            <li class="nav-item"><a class="nav-link" id="quote-of-the-day" href="#">Quote of the day</a></li>
         </ul>
     </nav>
     <div class="image-section"></div>
