made the page-break span 90% of the page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,6 +31,12 @@ ul {
     }
 }
 
+.page-break {
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .nav-link {
     color: #265714;
 }
