--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <div class="call-to-action">
         <p>“Come and give your say on these<br> masterpiece philosophies,<br> greatest philosopher wins...”</p>
     </div>
-    <hr>
+    <hr class="page-break">
     <ol>
         <li>
             <div class="quote-card">
