--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,12 @@
     padding: 0;
 }
 
+.navbar {
+    position: sticky;
+    top: -1px;
+    background-color: #ffff;
+}
+
 .navbar-brand img {
     width: 10vmin;
     height: 10vmin;
