--- a/src/app/quote-info/quote-info.component.css
+++ b/src/app/quote-info/quote-info.component.css
@@ -5,7 +5,7 @@
     border: solid black 1px;
     border-radius: 15px;
     justify-content: space-between;
-    margin-left: 1rem;
+    margin: 1rem;
     align-items: center;
     padding: 10px;
 }
@@ -44,4 +44,8 @@
 
 .author-details {
     color: #265714;
+}
+
+#hide-button {
+    margin-top: 1rem;
 }
