remove the line-break at the call to action section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </nav>
     <div class="image-section"></div>
     <div class="call-to-action">
-        <p>“Come and give your say on these<br> masterpiece philosophies,<br> greatest philosopher wins...”</p>
+        <p>“Come and give your say on these masterpiece philosophies,<br> greatest philosopher wins...”</p>
     </div>
     <hr class="page-break">
     <app-quote-info></app-quote-info>
