--- a/src/app/quote-info/quote-info.component.html
+++ b/src/app/quote-info/quote-info.component.html
@@ -25,8 +25,14 @@
                     <a href="#"><img src="../assets/linkedin.png" alt="linkedin image"></a>
                     <a href="#"><img src="../assets/instagram.png" alt="instagram image"></a>
                 </div>
-                <button class="btn btn-outline-secondary" (click)=toggleDetails(i) *ngIf="item.showDetails" id="hide-button">Hide info</button>
+                <div *ngIf="item.showDetails">
+                    <button class="btn btn-outline-secondary" (click)=toggleDetails(i) id="hide-button">Hide info</button><br>
+                    <app-remove-quote (remove)="quoteDelete($event,i)"></app-remove-quote>
+                </div>
             </div>
         </div>
     </li>
 </ol>
+<div *ngIf="quoteInfo.length < 1" class="alt-text">
+    You have no more quotes left, you could add more by filling the form below...
+</div>
