--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -24,6 +24,13 @@
                 <p>Please enter the actual quote.</p>
             </div>
         </div>
+        <div class="form-group">
+            <label for="submitter">Enter your name:</label>
+            <input id="submitter" type="text" class="form-control" required [(ngModel)]="newQuote.quoteSubmitter" name="quoteSubmitter" #quoteSubmitter='ngModel'>
+            <div [hidden]="quoteSubmitter.valid || quoteSubmitter.pristine" class="alert alert-danger">
+                <p>Please enter your name as the quote submitter</p>
+            </div>
+        </div>
         <div class="form-group" id="submit-button">
             <button class="btn btn-success" type="submit">Add Quote</button>
         </div>
