add a new link to the navbar brand displayed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-contents">
     <nav class="navbar">
-        <a class="navbar-brand" href="#"><img src="../assets/Logo.png"></a>
+        <a class="navbar-brand" href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/gh-pages/assets/Logo.png?raw=true"></a>
         <ul class="links">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
