alter the links for the images

--- a/src/app/quote-info/quote-info.component.html
+++ b/src/app/quote-info/quote-info.component.html
@@ -3,11 +3,11 @@
         <div appHighlight class="quote-card" *ngIf="item.topVote">
             <div class="voting" *ngIf="item.showDetails">
                 <div class="upvote">
-                    <div class="btn upvote-button " (click)=upVote(i)><img src="../assets/Polygon 1.png" width="40px" height="40px"></div>
+                    <div class="btn upvote-button " (click)=upVote(i)><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/Polygon%201.png?raw=true" width="40px" height="40px"></div>
                     <div class="upvote-display">{{item.upvoteValue}}</div>
                 </div>
                 <div class="downvote">
-                    <div class="btn downvote-button" (click)=downVote(i)><img src="../assets/Polygon 2.png" width="40px" height="40px"></div>
+                    <div class="btn downvote-button" (click)=downVote(i)><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/Polygon%202.png?raw=true" width="40px" height="40px"></div>
                     <div class="downvote-display">{{item.downvoteValue}}</div>
                 </div>
             </div>
@@ -23,10 +23,10 @@
                     </p>
                 </div>
                 <div class="social-links" *ngIf="item.showDetails">
-                    <a href="#"><img src="../assets/facebook.png" alt="facebook image"></a>
-                    <a href="#"><img src="../assets/twitter.png" alt="twitter image"></a>
-                    <a href="#"><img src="../assets/linkedin.png" alt="linkedin image"></a>
-                    <a href="#"><img src="../assets/instagram.png" alt="instagram image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/facebook.png?raw=true" alt="facebook image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/instagram.png?raw=true" alt="twitter image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/linkedin.png?raw=true" alt="linkedin image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/twitter.png?raw=true" alt="instagram image"></a>
                 </div>
                 <div *ngIf="item.showDetails">
                     <button class="btn btn-outline-secondary" (click)=toggleDetails(i) id="hide-button">Hide info</button><br>
@@ -37,11 +37,11 @@
         <div class="quote-card">
             <div class="voting" *ngIf="item.showDetails">
                 <div class="upvote">
-                    <div class="btn upvote-button " (click)=upVote(i)><img src="../assets/Polygon 1.png" width="40px" height="40px"></div>
+                    <div class="btn upvote-button " (click)=upVote(i)><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/Polygon%201.png?raw=true" width="40px" height="40px"></div>
                     <div class="upvote-display">{{item.upvoteValue}}</div>
                 </div>
                 <div class="downvote">
-                    <div class="btn downvote-button" (click)=downVote(i)><img src="../assets/Polygon 2.png" width="40px" height="40px"></div>
+                    <div class="btn downvote-button" (click)=downVote(i)><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/Polygon%202.png?raw=true" width="40px" height="40px"></div>
                     <div class="downvote-display">{{item.downvoteValue}}</div>
                 </div>
             </div>
@@ -57,10 +57,10 @@
                     </p>
                 </div>
                 <div class="social-links" *ngIf="item.showDetails">
-                    <a href="#"><img src="../assets/facebook.png" alt="facebook image"></a>
-                    <a href="#"><img src="../assets/twitter.png" alt="twitter image"></a>
-                    <a href="#"><img src="../assets/linkedin.png" alt="linkedin image"></a>
-                    <a href="#"><img src="../assets/instagram.png" alt="instagram image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/facebook.png?raw=true" alt="facebook image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/instagram.png?raw=true" alt="twitter image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/linkedin.png?raw=true" alt="linkedin image"></a>
+                    <a href="#"><img src="https://github.com/Ken-mbira/Quote-off/blob/master/src/assets/twitter.png?raw=true" alt="instagram image"></a>
                 </div>
                 <div *ngIf="item.showDetails">
                     <button class="btn btn-outline-secondary" (click)=toggleDetails(i) id="hide-button">Hide info</button><br>
